--- a/public/index.css
+++ b/public/index.css
@@ -12,6 +12,11 @@ body {
     margin: 0;
 }
 
+canvas {
+    height: 100%;
+    width: 100%;
+}
+
 .app {
     position: fixed;
     overflow: hidden;
