--- a/packages/ui/src/components/button/Button.module.css
+++ b/packages/ui/src/components/button/Button.module.css
@@ -1,24 +1,121 @@
-/* .button,
+.button,
 .button::before,
 .button::after {
 	all: unset;
 	box-sizing: border-box;
-} */
+}
 
 .button {
-	/* align-items: center;
+	align-items: center;
 	box-sizing: border-box;
-	display: flex;
+	display: inline-flex;
 	flex-shrink: 0;
-	font-family: sans-serif;
-	font-size: 0px;
+	font-family: var(--family-sans-serif);
+	font-weight: var(--weight-medium);
 	justify-content: center;
-	line-height: 1;
-	padding: 0rem;
-	font-weight: 400;
 	user-select: none;
-	background-color: var(--blue4); */
 }
 
 .button:disabled {
+	background-color: var(--slate-2);
+	box-shadow: inset 0 0 0 1px var(--slate-7);
+	color: var(--slate-8);
+	pointer-events: none;
+}
+
+/* Color */
+
+.blue {
+	background-color: var(--blue-2);
+	box-shadow: inset 0 0 0 1px var(--blue-7);
+	color: var(--blue-11);
+}
+
+.blue:active {
+	background-color: var(--blue-3);
+}
+
+.blue:focus {
+	box-shadow: inset 0 0 0 1px var(--blue-8), 0 0 0 1px var(--blue-8);
+}
+
+.blue:hover {
+	box-shadow: inset 0 0 0 1px var(--blue-8);
+}
+
+.gray {
+	background-color: var(--slate-1);
+	box-shadow: inset 0 0 0 1px var(--slate-7);
+	color: var(--slate-12);
+}
+
+.gray:active {
+	background-color: var(--slate-3);
+}
+
+.gray:focus {
+	box-shadow: inset 0 0 0 1px var(--slate-8), 0 0 0 1px var(--slate-8);
+}
+
+.gray:hover {
+	box-shadow: inset 0 0 0 1px var(--slate-8);
+}
+
+.green {
+	background-color: var(--green-1);
+	box-shadow: inset 0 0 0 1px var(--green-7);
+	color: var(--green-12);
+}
+
+.green:active {
+	background-color: var(--green-3);
+}
+
+.green:focus {
+	box-shadow: inset 0 0 0 1px var(--green-8), 0 0 0 1px var(--green-8);
+}
+
+.green:hover {
+	box-shadow: inset 0 0 0 1px var(--green-8);
+}
+
+.red {
+	background-color: var(--red-1);
+	box-shadow: inset 0 0 0 1px var(--red-7);
+	color: var(--red-12);
+}
+
+.red:active {
+	background-color: var(--red-3);
+}
+
+.red:focus {
+	box-shadow: inset 0 0 0 1px var(--red-8), 0 0 0 1px var(--red-8);
+}
+
+.red:hover {
+	box-shadow: inset 0 0 0 1px var(--red-8);
+}
+
+/* Size */
+
+.small {
+	border-radius: var(--radius-1);
+	font-size: var(--font-1);
+	line-height: 1;
+	padding: var(--size-1) var(--size-2);
+}
+
+.medium {
+	border-radius: var(--radius-1);
+	font-size: var(--font-2);
+	line-height: 1;
+	padding: var(--size-2) var(--size-3);
+}
+
+.large {
+	border-radius: var(--radius-1);
+	font-size: var(--font-3);
+	line-height: 1;
+	padding: var(--size-3) var(--size-4);
 }
