--- a/packages/ui/src/components/button/Button.module.scss
+++ b/packages/ui/src/components/button/Button.module.scss
@@ -14,13 +14,13 @@
 	font-weight: var(--weight-medium);
 	justify-content: center;
 	user-select: none;
-}
 
-.button:disabled {
-	background-color: var(--slate-2);
-	box-shadow: inset 0 0 0 1px var(--slate-7);
-	color: var(--slate-8);
-	pointer-events: none;
+	&:disabled {
+		background-color: var(--slate-2);
+		box-shadow: inset 0 0 0 1px var(--slate-7);
+		color: var(--slate-8);
+		pointer-events: none;
+	}
 }
 
 /* Color */
